--- a/package.json
+++ b/package.json
@@ -19,10 +19,10 @@
   "homepage": "https://github.com/WilmerAlquinga/cuentas-cobrar-ws#readme",
   "dependencies": {
     "body-parser": "^1.20.1",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "morgan": "^1.10.0",
-    "oracledb": "^5.5.0",
-    "sequelize": "^6.25.7"
+    "oracledb": "^5.5.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
