--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "express": "^4.18.2",
     "morgan": "^1.10.0",
     "oracledb": "^5.5.0",
-    "sequelize": "^6.25.7"
+    "sequelize": "^6.25.7",
+    "sequelize-cli": "^6.5.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
